增加前端代码；

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "install": "cd frontend & yarn install",
+    "server:build": "node config/start.ts & cd frontend & yarn build",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
